[package]
name = "iss-async-graphql-error-handling"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.65"
async-graphql = { version = "4.0.14", default-features = false, features = [
  "tracing",
] }
async-graphql-axum = { version = "4.0.14" }
axum = { version = "0.5.16" }
tokio = { version = "1.21.1", features = ["full"] }
tower-http = { version = "0.3.4", features = ["trace"] }
tracing = { version = "0.1.36", features = ["log"] }
tracing-subscriber = { version = "0.3.15", features = ["env-filter", "json"] }
tracing-log = "0.1.3"
